[gd_scene load_steps=2 format=3 uid="uid://dsvoanrsetrxb"]

[ext_resource type="Script" path="res://Interface/Settings/settings.gd" id="1_u8f0g"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u8f0g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
value = 40.0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="Music" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
value = 40.0

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Sensitivity"

[node name="Sensitivity" type="HSlider" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
value = 40.0

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"
horizontal_alignment = 1

[node name="Fullscreen" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer/Sensitivity" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer/Sensitivity" to="." method="_on_sensitivity_value_changed"]
[connection signal="toggled" from="MarginContainer/HBoxContainer/VBoxContainer2/VBoxContainer/HBoxContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
